Fix h* letter spacing, weight and color

--- a/style.css
+++ b/style.css
@@ -25,7 +25,11 @@ font:30px/2 'PT Sans', sans-serif;
 }
 
 h1, h2, h3, h4, h5 {
+  color: #333;
+  letter-spacing: -0.05em;
   line-height: 1;
+  font-family: Helvetica;
+  font-weight: bold;
 }
 
 h1 {
@@ -705,5 +709,5 @@ font-style:italic;
       color: white;
       border-top: 30px solid #AAA;
       padding: 10px;
-    }    
+    }
 }
